<resources>
    <string name="app_name">Donation_V1</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">DONATE</string>
    <string name="paypal">Paypal</string>
    <string name="direct">Direct</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="reportTitle">Report</string>
    <string name="donateMenu">Donate</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="amountText">Amount</string>
    <string name="menuReset">Reset</string>
</resources>