<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.AppCompat.Medium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/donateTitle"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="362dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/donateTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donateSubtitle"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="366dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:text="@string/donateSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="44dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/donateButton"
        android:layout_below="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/direct" />
    </RadioGroup>

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/paymentMethod"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="395dp"
        android:layout_height="56dp"
        android:layout_above="@+id/donateButton"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="104dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/amountText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <EditText
        android:id="@+id/amountDirect"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toEndOf="@+id/amountText"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/amountTotal"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donateButton"
        app:layout_constraintTop_toBottomOf="@+id/amountDirect" />


</androidx.constraintlayout.widget.ConstraintLayout>